--- a/FullStack-Engineer/TeaCozy/resources/css/style.css
+++ b/FullStack-Engineer/TeaCozy/resources/css/style.css
@@ -11,13 +11,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    line-height: 2.2;
 }
 
 header {
     background-color: black;
     width: 100%;
     height: 69px;
-    padding: 0px 10px;
+    padding: 0 10px;
     border-bottom: 1px solid seashell;
     position: fixed;
     display: flex;
@@ -33,6 +34,7 @@ header ul {
 }
 header li {
     display: inline;
+    margin-left: 20px;
 }
 header a {
     color: seashell;
@@ -49,8 +51,13 @@ header a {
 }
 #mission div {
     width: 100%;
+    padding: 9.5px;
     background-color: black;
     text-align: center;
+}
+
+#featured-tea, #locations {
+    margin-top: 69px;
 }
 
 #featured-tea {
@@ -86,20 +93,30 @@ header a {
     justify-content: center;
 }
 #addresses div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     width: 300px;
     height: 300px;
     margin: 0 40px;
+    padding: 12px 0px;
     background-color: black;
 }
 
 footer {
     height: 200px;
     width: 100%;
+    line-height: 1.8;
     position: relative;
     top: 69px;
     text-align: center;
 }
+#contact-info * {
+    margin-bottom: 20px;
+}
 #copyright {
+    height: 69px;
     float: left;
-    margin-left: 20px;
+    margin: 34.5px 0px 0px 20px;
 }
